package com.kaanf.core.presentation.util

object TestTags {
    const val LOGIN_SCREEN = "login_screen"
    const val LOGIN_EMAIL = "login_email"
    const val LOGIN_PASSWORD = "login_password"
    const val LOGIN_SUBMIT = "login_submit"
    const val LOGIN_TO_REGISTER = "login_to_register"

    const val REGISTER_SCREEN = "register_screen"
    const val REGISTER_EMAIL = "register_email"
    const val REGISTER_PASSWORD = "register_password"
    const val REGISTER_RE_PASSWORD = "register_re_password"
    const val REGISTER_SUBMIT = "register_submit"
    const val REGISTER_RETURN_TO_LOGIN = "register_return_to_login"

    const val VERIFICATION_SENT_SCREEN = "verification_sent_screen"
    const val VERIFICATION_SENT_RETURN_TO_LOGIN = "verification_sent_return_to_login"

    const val VERIFICATION_RESULT_VERIFIED_SCREEN = "verification_result_verified_screen"
    const val VERIFICATION_RESULT_CONTINUE = "verification_result_continue"

    const val CHARACTER_SCREEN = "character_screen"
}
